=head1 NAME

Devel::NYTProf::Changes - List of significant changes to Devel::NYTProf

(As of $Date$ $Revision$)

=head2 Changes in Devel::NYTProf 2.11

  Added treemap view of package and subroutine times, with drill-down.

=head2 Changes in Devel::NYTProf 2.10 (svn r774) 18th June 2009

  Fixed call count for XSubs that was one too high.
  Fixed enable_profile() after fork thanks to delamonpansie
    http://code.google.com/p/perl-devel-nytprof/issues/detail?id=15
  Fixed to use correct scripts during test and so avoid permissions
    issues, thanks to David Golden.
  Fixed suprious "Unable to determine line number" warnings
    when using options like -p, -n, -Mfoo.

  Changed enable_profile() to discard the time spent since
    profile was disabled.
  Changed NYTPROF env var parsing to allow backslash to escape
    colons, for Windows, thanks to Joshua ben Jore.

  Added license, homepage, bugtracker, repository and MailingList
    resources to META.yml thanks to Michael G Schwern.
  Added nytprofcg utility to generate callgrind data for
    viewing via Kcachegrind, thanks to Chia-liang Kao.

=head2 Changes in Devel::NYTProf 2.09 (svn r733) 29th March 2009

  Added support for modules using AutoLoader, e.g., POSIX & Storable,
    to fix the "Unable to open '... (autosplit into ...)'" warnings.
  Fixed report filename generation to remove colons,
    for Windows, reported by Adam Kennedy in rt bug #43798.
  Fixed report filename generation to remove dots, for VMS.
  Fixed savesrc option which wasn't safe and reliable.
  Added missing t/test22-strevala.t to MANIFEST.
  Extended testing to exercise compress and savesrc options.

Ported to VMS, thanks to Peter (Stig) Edwards:

  Renamed t/\d\d.test.t    files to t/\d\d_test.t 
          t/test*.pm.x     files to t/test*.pm_x 
          t/test*fork.\d.* files to t/test*fork-\d.*
          .js and .css     file to only have one period/dot
    for greater portability.  VMS ODS-2 files can only have
    one period/dot.